Fixing notes to wrap

--- a/src/components/NoteItem/NoteItem.module.scss
+++ b/src/components/NoteItem/NoteItem.module.scss
@@ -7,7 +7,7 @@
   border-radius: var(--borderRadius);
   background-color: var(--secondaryBackgroundColor);
   box-shadow: var(--shadow);
-  white-space: pre;
+  white-space: pre-wrap;
 
   &:hover {
     box-shadow: var(--bigShadow);
